# rhc-burger_war

./: .gitignore  README.md
burger_navigation/launch/: burger_navigation.launch
burger_navigation/param/: amcl.yaml  costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  local_costmap_params.yaml
burger_navigation/rviz/: burger_navigation.rviz
burger_war_dev/: CMakeLists.txt
burger_war_dev/burger_war_dev/launch/: enemy_detector.launch  get_enemy.launch  send_priority_goal.launch  setup_sim_blue.launch  sim_robot_run.launch  your_burger.launch
burger_war_dev/burger_war_dev/scripts/: EnemyState.py  enemy_detector_camera.py  globalPlanner2.py  goal_publisher.py  marker_pose_blue.json  send_priority_goal.py  server_receiver.py
burger_war_dev/launch/: enemy_detector.launch  get_enemy.launch  obstacle_detector.launch  your_burger.launch
burger_war_dev/scripts/: EnemyState.py  enemy_detector.py  enemy_detector_lidar.py  globalPlanner2.py  goal_publisher.py  pub_enemy.py  pub_my_pose.py  send_priority_goal.py  transform_enemy_pose.py
